--- a/IncidentTableView/Base.lproj/Main.storyboard
+++ b/IncidentTableView/Base.lproj/Main.storyboard
@@ -151,16 +151,12 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="716"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView clipsSubviews="YES" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Floor1" translatesAutoresizingMaskIntoConstraints="NO" id="gGN-qr-g1i">
+                            <imageView clipsSubviews="YES" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Floor1" translatesAutoresizingMaskIntoConstraints="NO" id="gGN-qr-g1i" customClass="IncidentLocationView" customModule="IncidentTableView" customModuleProvider="target">
                                 <rect key="frame" x="0.0" y="0.0" width="414" height="716"/>
                                 <gestureRecognizers/>
                                 <connections>
                                     <outletCollection property="gestureRecognizers" destination="c9G-t7-YLT" appends="YES" id="cWr-2s-skp"/>
                                 </connections>
-                            </imageView>
-                            <imageView hidden="YES" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="redDot" translatesAutoresizingMaskIntoConstraints="NO" id="wc1-t4-nGu">
-                                <rect key="frame" x="155" y="221" width="18" height="17"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                             </imageView>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="rMl-8u-gpA"/>
@@ -174,7 +170,6 @@
                     </view>
                     <navigationItem key="navigationItem" id="Eg6-5f-DBy"/>
                     <connections>
-                        <outlet property="dot" destination="wc1-t4-nGu" id="C1M-D7-39t"/>
                         <outlet property="gestures" destination="c9G-t7-YLT" id="kaV-gE-l5Z"/>
                         <outlet property="image" destination="gGN-qr-g1i" id="dfq-Aj-jCl"/>
                         <segue destination="Xlh-7e-n3b" kind="unwind" identifier="unwindVC2" unwindAction="unwindVC2:" id="je7-FX-8HW"/>
@@ -547,6 +542,11 @@
             <point key="canvasLocation" x="926.08695652173924" y="79.891304347826093"/>
         </scene>
     </scenes>
+    <designables>
+        <designable name="gGN-qr-g1i">
+            <size key="intrinsicContentSize" width="718" height="1142"/>
+        </designable>
+    </designables>
     <inferredMetricsTieBreakers>
         <segue reference="HUN-uZ-Obl"/>
         <segue reference="NcS-rt-K5w"/>
@@ -557,7 +557,6 @@
         <image name="pencil" catalog="system" width="128" height="113"/>
         <image name="pencil.circle.fill" catalog="system" width="128" height="121"/>
         <image name="rectangle.and.pencil.and.ellipsis" catalog="system" width="128" height="81"/>
-        <image name="redDot" width="512" height="512"/>
         <image name="text.justify" catalog="system" width="128" height="100"/>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
