--- a/IncidentTableView/Base.lproj/Main.storyboard
+++ b/IncidentTableView/Base.lproj/Main.storyboard
@@ -204,6 +204,27 @@
             </objects>
             <point key="canvasLocation" x="128" y="80"/>
         </scene>
+        <!--View Controller-->
+        <scene sceneID="7VO-S7-wYy">
+            <objects>
+                <viewController id="Qxz-93-q8B" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="Y7T-uU-6WU">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="736"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="parkingLotz" translatesAutoresizingMaskIntoConstraints="NO" id="2da-9x-TL9">
+                                <rect key="frame" x="0.0" y="0.0" width="414" height="736"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            </imageView>
+                        </subviews>
+                        <viewLayoutGuide key="safeArea" id="OXc-Jb-G7s"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="leI-6F-fwY" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2781.1594202898555" y="-1375.271739130435"/>
+        </scene>
         <!--HeatMap-->
         <scene sceneID="rTE-Br-ftT">
             <objects>
@@ -686,13 +707,14 @@
     </designables>
     <inferredMetricsTieBreakers>
         <segue reference="HUN-uZ-Obl"/>
-        <segue reference="NcS-rt-K5w"/>
+        <segue reference="OQ7-gx-zyA"/>
         <segue reference="EYx-nk-Uuk"/>
         <segue reference="ed9-N9-3Wt"/>
     </inferredMetricsTieBreakers>
     <resources>
         <image name="Floor1" width="718" height="1142"/>
         <image name="info" width="28" height="28"/>
+        <image name="parkingLotz" width="720" height="1162"/>
         <image name="pencil" catalog="system" width="128" height="113"/>
         <image name="pencil.circle.fill" catalog="system" width="128" height="121"/>
         <image name="rectangle.and.pencil.and.ellipsis" catalog="system" width="128" height="81"/>
