--- a/IncidentTableView/Base.lproj/Main.storyboard
+++ b/IncidentTableView/Base.lproj/Main.storyboard
@@ -169,7 +169,7 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="O1d-0q-Mdt" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
                 <exit id="MMV-Pl-aSO" userLabel="Exit" sceneMemberID="exit"/>
             </objects>
-            <point key="canvasLocation" x="1860.8695652173915" y="787.50000000000011"/>
+            <point key="canvasLocation" x="1845" y="938"/>
         </scene>
         <!--Login-->
         <scene sceneID="toq-gp-Dwf">
@@ -297,6 +297,22 @@
                                 <color key="textColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <nil key="highlightedColor"/>
                             </label>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="g0e-WI-hNK">
+                                <rect key="frame" x="243" y="653" width="155" height="43"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <color key="backgroundColor" red="0.59769994019999995" green="0.6597753167" blue="0.98827296499999995" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                                <fontDescription key="fontDescription" name="HiraginoSans-W6" family="Hiragino Sans" pointSize="17"/>
+                                <state key="normal" title="Next Floor">
+                                    <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                </state>
+                                <connections>
+                                    <segue destination="7nq-gC-QTc" kind="show" id="yTG-yE-c1K"/>
+                                </connections>
+                            </button>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="northArrowSide" translatesAutoresizingMaskIntoConstraints="NO" id="FLc-SH-wvJ">
+                                <rect key="frame" x="0.0" y="0.0" width="66" height="46"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            </imageView>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="rMl-8u-gpA"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
@@ -325,18 +341,19 @@
                     </connections>
                 </tapGestureRecognizer>
             </objects>
-            <point key="canvasLocation" x="3392.753623188406" y="-681.52173913043487"/>
+            <point key="canvasLocation" x="3563.7681159420295" y="-704.34782608695662"/>
         </scene>
         <!--Map View Controller Two-->
         <scene sceneID="bpV-3a-p8l">
             <objects>
                 <viewController id="7nq-gC-QTc" customClass="MapViewControllerTwo" customModule="IncidentTableView" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="CpX-ZW-zrs">
-                        <rect key="frame" x="0.0" y="0.0" width="414" height="736"/>
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="716"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <viewLayoutGuide key="safeArea" id="2jH-Qo-7sf"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                     </view>
+                    <navigationItem key="navigationItem" id="FMD-Ch-GUb"/>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="QoY-p1-z1H" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
@@ -714,6 +731,7 @@
     <resources>
         <image name="Floor1" width="718" height="1142"/>
         <image name="info" width="28" height="28"/>
+        <image name="northArrowSide" width="512" height="512"/>
         <image name="parkingLotz" width="720" height="1162"/>
         <image name="pencil" catalog="system" width="128" height="113"/>
         <image name="pencil.circle.fill" catalog="system" width="128" height="121"/>
