--- a/IncidentTableView/Base.lproj/Main.storyboard
+++ b/IncidentTableView/Base.lproj/Main.storyboard
@@ -189,7 +189,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="rPm-hG-uOk" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-666" y="78"/>
+            <point key="canvasLocation" x="-666.66666666666674" y="77.445652173913047"/>
         </scene>
         <!--Login-->
         <scene sceneID="toq-gp-Dwf">
@@ -388,7 +388,7 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="716"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="floor2" translatesAutoresizingMaskIntoConstraints="NO" id="60m-NN-LJF">
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="floor2" translatesAutoresizingMaskIntoConstraints="NO" id="60m-NN-LJF" customClass="IncidentLocationView" customModule="IncidentTableView" customModuleProvider="target">
                                 <rect key="frame" x="0.0" y="0.0" width="414" height="716"/>
                             </imageView>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="northArrowSide" translatesAutoresizingMaskIntoConstraints="NO" id="9Yy-Jc-mmH">
@@ -421,6 +421,7 @@
                     <navigationItem key="navigationItem" id="FMD-Ch-GUb"/>
                     <connections>
                         <outlet property="gesture" destination="B7h-44-Utl" id="rx2-5o-0za"/>
+                        <outlet property="image" destination="60m-NN-LJF" id="JjM-5F-I3E"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="QoY-p1-z1H" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
@@ -783,6 +784,9 @@
         </scene>
     </scenes>
     <designables>
+        <designable name="60m-NN-LJF">
+            <size key="intrinsicContentSize" width="219" height="600"/>
+        </designable>
         <designable name="gGN-qr-g1i">
             <size key="intrinsicContentSize" width="718" height="1142"/>
         </designable>
